[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/House In a Forest Loop.ogg" type="AudioStream" id=1]
[ext_resource path="res://assets/art/gameover.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/HUD/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Mob/Mob.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Main/Main.gd" type="Script" id=6]
[ext_resource path="res://assets/art/hurt.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/art/water.png" type="Texture" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 6 )
Mob = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 480, 720 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.501961, 0.694118, 0.572549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 4 )]
visible = false

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -16.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="death" from="Player" to="." method="game_over"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
